; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/pwd/extr_getpwnam.c_getpwnam.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/pwd/extr_getpwnam.c_getpwnam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@__tmp_passwd = common dso_local global %struct.passwd zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.passwd* @getpwnam(i8* %0) #0 {
  %2 = alloca %struct.passwd*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32* @myos_user_getN(i8* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.passwd* null, %struct.passwd** %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @build_tmp_passwd()
  store %struct.passwd* @__tmp_passwd, %struct.passwd** %2, align 8
  br label %12

12:                                               ; preds = %10, %9
  %13 = load %struct.passwd*, %struct.passwd** %2, align 8
  ret %struct.passwd* %13
}

declare dso_local i32* @myos_user_getN(i8*) #1

declare dso_local i32 @build_tmp_passwd(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
